--- a/tasks/NETfeatures.yml
+++ b/tasks/NETfeatures.yml
@@ -1,7 +1,7 @@
 # Install .NET 4.7.2 or higher and its features.
-# currently incomplete - emailed MinYoung 6.23.2025 to ask if Kuiper does this anyway
 # use ansible.windows.win_feature module: https://docs.ansible.com/ansible/latest/collections/ansible/windows/win_feature_module.html
-# Windows Server 2019 and up includes 4.7.2 or higher
+# currently incomplete - Windows Server 2019 and up includes 4.7.2 or higher 
+# skip this one?
 ---
 - name: Add tags to all tasks
   tags:
@@ -9,7 +9,7 @@
     - caboodle
   block:
     - name: Install .NET 4.7.2
-      aansible.windows.win_feature:
+      ansible.windows.win_feature:
         path: HKLM:\SYSTEM\CurrentControlSet\services\tcpip\Parameters
         name: KeepAliveTime
         data: "{{ cogito_keepalivetime }}"
