--- a/tasks/disablempp.yml
+++ b/tasks/disablempp.yml
@@ -11,7 +11,7 @@
     - clarity
     - caboodle
   block:
-    - name: MPP
+    - name: Disable Memory Pressure Protection
       ansible.windows.win_regedit:
         path: HKLM:\SYSTEM\CurrentControlSet\services\tcpip\Parameters
         name: EnableMPP
