extended & corrected cogito user rights & groups

--- a/tasks/cogitousersos.yml
+++ b/tasks/cogitousersos.yml
@@ -1,4 +1,4 @@
-# grant OS privileges needed for Cogito
+# grant OS privileges and groups needed for Cogito
 # need to add logic to set & feed in the correct / different user accounts
 # consider this - make the variables generic. define the specific user on a host variable (define variable file with fqdn for relevant host)
 ---
@@ -14,11 +14,14 @@
         users:
           - "{{ clarity_user_sqlengine }}"
           - "{{ clarity_user_sqlagent }}"
+          - "{{ clarity_user_console }}"
+          - "{{ clarity_user_datalink }}"
+          - "{{ slicerdicer_user }}"
         action: add
 
     - name: Lock pages in memory
       ansible.windows.win_user_right:
-        name: SeServiceLogonRight
+        name: SeLockMemoryPrivilege
         users:
           - "{{ clarity_user_sqlengine }}"
           - "{{ clarity_user_sqlagent }}"
@@ -39,3 +42,21 @@
           - "{{ clarity_user_sqlengine }}"
           - "{{ clarity_user_sqlagent }}"
         action: add
+
+    - name: Add user to local admin group
+      ansible.windows.win_group_membership:
+        name: Administrators
+        members:
+          - "{{ clarity_user_console }}"
+          - "{{ clarity_user_datalink }}"
+          - "{{ caboodle_user_execution_service }}"
+          - "{{ caboodle_install_user }}"
+          - "{{ slicerdicer_user }}"
+        state: present
+
+    - name: Add user to performance log users group
+      ansible.windows.win_group_membership:
+        name: Performance Log Users
+        members:
+          - "{{ slicerdicer_user }}"
+        state: present
