setting up os filesystem config for disks

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,11 @@
 cogito_keepalivetime: 300000
 cogito_tcptimedwaitdelay: 30
 cogito_pagefilesize: 32768
-clarity_user_sqlengine: sapphire\admin
-clarity_user_sqlagent: sapphire\admin
-caboodle_user_sqlengine: sapphire\admin
-caboodle_user_sqlagent: sapphire\admin
-caboodle_user_warehouse: sapphire\admin
-clarity_user_console: sapphire\admin
-clarity_user_datalink: sapphire\admin
-caboodle_user_execution_service: sapphire\admin
-caboodle_install_user: sapphire\admin
-slicerdicer_user: sapphire\admin
+user_sqlengine: demouser
+user_sqlagent: demouser
+caboodle_user_warehouse: demouser
+clarity_user_console: demouser
+clarity_user_datalink: demouser
+caboodle_user_execution_service: demouser
+caboodle_install_user: demouser
+slicerdicer_user: demouser
