added tasks to create DBs and their containing folders

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,3 +66,19 @@
     - OS
     - Caboodle
     - Clarity
+- name: Create mnt folders for sql db files
+  ansible.builtin.include_tasks:
+    file: mntdirectories.yml
+  tags:
+    - SQL
+    - OS
+    - Caboodle
+    - Clarity
+#- name: Create Epic SQL Databases
+#  ansible.builtin.include_tasks:
+#    file: cogitodbcreation.yml
+#  tags:
+#    - SQL
+#    - OS
+#    - Caboodle
+#    - Clarity
