--- a/tasks/sqltuneforepic.yml
+++ b/tasks/sqltuneforepic.yml
@@ -1,4 +1,5 @@
 # configure SQL Server per Epic specs
+# How can we detect the numbering to use for regedit name? This only works if it runs them all in one go. Otherwise we might overwrite existing.
 
 ---
 - name: Add tags to all tasks
@@ -9,7 +10,7 @@
   block:
     - name: Add Trace Flags to SQL Server Startup Parameters
       ansible.windows.win_regedit:
-        path: "HKLM:\\SOFTWARE\\Microsoft\\Microsoft SQL Server\\MSSQL16.MSSQLSERVER\\MSSQLServer\\Parameters"  # How can we detect this? This only works if it runs them all in one go. Otherwise we might overwrite existing.
+        path: "HKLM:\\SOFTWARE\\Microsoft\\Microsoft SQL Server\\MSSQL16.MSSQLSERVER\\MSSQLServer\\Parameters"  
         name: "{{ 'SQLArg' ~ (item_index + 3) }}"
         data: "-T{{ item }}"
         type: "string"
@@ -20,7 +21,16 @@
       register: trace_flag_added
 
     - name: Restart SQL Server if trace flag was added
+      when: trace_flag_added.changed
       ansible.windows.win_service:
         name: MSSQLSERVER
         state: restarted
-      when: trace_flag_added.changed
+
+    - name: Set MaxDOP based on cores on the server
+      ansible.windows.win_dsc:
+        InstanceName: MSSQLSERVER
+        resource_name: SqlMaxDop
+        Ensure: present
+        MaxDop: "{{ [hostvars[inventory_hostname].cpu_options.core_count | int * hostvars[inventory_hostname].cpu_options.threads_per_core | int, 8] | min }}"
+
+# needs to set agent and engine accounts
