--- a/tasks/dbcreation2.yml
+++ b/tasks/dbcreation2.yml
@@ -1,17 +1,19 @@
----
-- name: Jinja2 POC
-  hosts: localhost
-  gather_facts: false
-  vars:
-    dbname: CDWStg
-  tasks:
-    - name: Show test fact
-      ansible.builtin.debug:
-        var: "{{ lookup('ansible.builtin.template', 'will.j2') }}"
-      delegate_to: localhost
-    - name: Write template to a file
-      ansible.builtin.copy:
-        content: "{{ lookup('ansible.builtin.template', 'will.j2') }}"
-        dest: will.txt
-        mode: '0644'
-      delegate_to: localhost
+# - name: parent
+
+#  block:
+#    - name: Show test fact
+#      ansible.builtin.debug:
+#        var: "{{ lookup('ansible.builtin.template', 'dbcreationscript.j2') }}"
+#      delegate_to: localhost
+
+- name: Write template to a file
+  tags:
+  - template
+  ansible.builtin.copy:
+    content: "{{ lookup('ansible.builtin.template', 'dbcreationscript.j2') }}"
+    dest: will.txt
+    mode: '0644'
+  delegate_to: localhost
+  loop: "{{ sql_dbs }}"
+  loop_control:
+    loop_var: db
