--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,3 +82,14 @@
     - OS
     - Caboodle
     - Clarity
+    - database
+- name: Template test
+  ansible.builtin.include_tasks:
+    file: dbcreation2.yml
+  tags:
+    - SQL
+    - OS
+    - Caboodle
+    - Clarity
+    - database
+    - template
