--- a/tasks/sqlfolderpermissions.yml
+++ b/tasks/sqlfolderpermissions.yml
@@ -1,3 +1,5 @@
+# idea - maybe we can just build an array w/ the variables, and then run a loop off the array
+#
 ---
 - name: Add tags to all tasks
   tags:
@@ -7,12 +9,120 @@
     - clarity
     - caboodle
   block:
-    - name: Open permissions on sql install folder
+    - name: Open permissions on sql install folders
       ansible.windows.win_acl:
-        path: S:\SQL\
+        path: '{{ dsc_sqltempdbdir }}'
         user: '{{ user_sqlengine }}'
         rights: FullControl
         type: allow
         state: present
         inherit: ContainerInherit, ObjectInherit
         propagation: 'None'
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqltempdbdir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqltempdblogdir }}'
+        user: '{{ user_sqlengine }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+    - name: Open permissions on sql install folder
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqltempdblogdir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_installsqldatadir }}'
+        user: '{{ user_sqlengine }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+    - name: Open permissions on sql install folder
+      ansible.windows.win_acl:
+        path: '{{ dsc_installsqldatadir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqlbackupdir }}'
+        user: '{{ user_sqlengine }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+    - name: Open permissions on sql install folder
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqlbackupdir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqluserdbdir }}'
+        user: '{{ user_sqlengine }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+    - name: Open permissions on sql install folder
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqluserdbdir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+    - name: Open permissions on sql install folders
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqluserdblogdir }}'
+        user: '{{ user_sqlengine }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+    - name: Open permissions on sql install folder
+      ansible.windows.win_acl:
+        path: '{{ dsc_sqluserdblogdir }}'
+        user: '{{ dsc_sqlsysadminaccounts }}'
+        rights: FullControl
+        type: allow
+        state: present
+        inherit: ContainerInherit, ObjectInherit
+        propagation: 'None'
+
+
+
+
