--- a/tasks/cogitodbcreation.yml
+++ b/tasks/cogitodbcreation.yml
@@ -1,10 +1,9 @@
-# why does it run the script even when test query returns null?
-# how can we restructure clarity_report_databases.db.data_path and log_path so that T-SQL will iterate over varying numbers of filepaths clarity_report_databases.db.data_file_count?
-# consider index var
-#
 # These recommended DB settings are correct by default; we don't enforce them with ansible:
-#     collation is SQL_Latin1_General_CP1_CI_AS, Default Cursor is set to GLOBAL, Confirm the Page Verify setting is set to CHECKSUM,
-
+#     collation is SQL_Latin1_General_CP1_CI_AS, Default Cursor is set to GLOBAL, Confirm the Page Verify setting is set to CHECKSUM
+#
+# needs - caboodle changes:
+# If you are creating your staging database, set Auto Update Statistics to True and Auto Update Statistics Asynchronously to False. 
+# If you are creating your reporting database, set both Auto Update Statistics and Auto Update Statistics Asynchronously to True.
 ---
 - name: Add tags to all tasks
   tags:
@@ -41,245 +40,6 @@
           loop: "{{ sql_dbs }}"
           loop_control:
             loop_var: db
-
-    # - name: Configure Clarity Stage SQL Databases
-    #   when: clarity_stage_databases is defined
-    #   block:
-    #     - name: Create Cogito SQL Database Files with T-SQL
-    #       ansible.windows.win_dsc:
-    #         resource_name: SqlScriptQuery
-    #         Id: "ConfigureDatabaseFiles"
-    #         InstanceName: "{{ dsc_instancename }}"
-    #         Variable: "NAME={{ db.name }}, SIZE={{ db.db_size }}, MAXSIZE={{ db.db_max_size }}, FILEGROWTH={{ db.db_growth }}, DATAPATH={{db.data_path}},LOGSIZE={{ db.log_size }}, LOGMAXSIZE={{ db.log_max_size }}, LOGFILEGROWTH={{ db.log_growth }}, LOGFILEPATH={{ db.log_path }}"
-    #         Encrypt: Optional
-    #         SetQuery: |
-    #           USE [master]
-    #           GO
-    #           CREATE DATABASE $(NAME)
-    #           ON
-    #           PRIMARY
-    #               (NAME = $(NAME)1,
-    #               FILENAME = '$(DATAPATH)1\mnt\CLStg1.mdf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH)),
-    #               ( NAME = $(NAME)2,
-    #               FILENAME = '$(DATAPATH)2\mnt\CLStg2.ndf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH))
-    #           LOG ON
-    #              (NAME = $(NAME)Log,
-    #               FILENAME = '$(LOGFILEPATH)\mnt\CLStg.ldf',
-    #               SIZE = $(LOGSIZE),
-    #               MAXSIZE = $(LOGMAXSIZE),
-    #               FILEGROWTH = $(LOGFILEGROWTH));
-    #           GO
-    #         GetQuery: |
-    #           SELECT NULL;
-    #         TestQuery: |
-    #           USE [msdb]
-    #           GO
-    #           IF EXISTS (
-    #             SELECT 1
-    #             FROM sys.databases
-    #             WHERE name = '$(NAME)'
-    #           )
-    #             PRINT 'Found $(NAME) database'
-    #           ELSE
-    #             RAISERROR ('Did not find $(NAME) role', 16, 1)
-    #           GO
-    #       loop: "{{ clarity_stage_databases }}"
-    #       loop_control:
-    #         loop_var: db
-
-    # - name: Configure Caboodle Report SQL Databases
-    #   when: caboodle_report_databases is defined
-    #   block:
-    #   - name: Create Caboodle SQL Database Files with T-SQL
-    #     ansible.windows.win_dsc:
-    #       resource_name: SqlScriptQuery
-    #       Id: "ConfigureDatabaseFiles"
-    #       InstanceName: "{{ dsc_instancename }}"
-    #       Variable: "NAME={{ db.name }}, SIZE={{ db.db_size }}, MAXSIZE={{ db.db_max_size }}, FILEGROWTH={{ db.db_growth }}, DATAPATH={{ db.data_path }},LOGSIZE={{ db.log_size }}, LOGMAXSIZE={{ db.log_max_size }}, LOGFILEGROWTH={{ db.log_growth }}, LOGFILEPATH={{ db.log_path }}"
-    #       Encrypt: Optional
-    #       SetQuery: |
-    #         USE [master]
-    #         GO
-    #         CREATE DATABASE $(NAME)
-    #         ON
-    #         PRIMARY
-    #             (NAME = $(NAME)1,
-    #             FILENAME = '$(DATAPATH)1\mnt\CDWRpt1.mdf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)2,
-    #             FILENAME = '$(DATAPATH)2\mnt\CDWRpt2.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)3,
-    #             FILENAME = '$(DATAPATH)3\mnt\CDWRpt3.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)4,
-    #             FILENAME = '$(DATAPATH)4\mnt\CDWRpt4.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)5,
-    #             FILENAME = '$(DATAPATH)5\mnt\CDWRpt5.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)6,
-    #             FILENAME = '$(DATAPATH)6\mnt\CDWRpt6.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)7,
-    #             FILENAME = '$(DATAPATH)7\mnt\CDWRpt7.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH)),
-    #             ( NAME = $(NAME)8,
-    #             FILENAME = '$(DATAPATH)8\mnt\CDWRpt8.ndf',
-    #             SIZE = $(SIZE),
-    #             MAXSIZE = $(MAXSIZE),
-    #             FILEGROWTH = $(FILEGROWTH))
-    #         LOG ON
-    #            (NAME = $(NAME)Log,
-    #             FILENAME = '$(LOGFILEPATH)\mnt\CDWRpt.ldf',
-    #             SIZE = $(LOGSIZE),
-    #             MAXSIZE = $(LOGMAXSIZE),
-    #             FILEGROWTH = $(LOGFILEGROWTH));
-    #         GO
-    #       GetQuery: |
-    #         SELECT NULL;
-    #       TestQuery: |
-    #         USE [msdb]
-    #         GO
-    #         IF EXISTS (
-    #           SELECT 1
-    #           FROM sys.databases
-    #           WHERE name = '$(NAME)'
-    #         )
-    #           PRINT 'Found $(NAME) database'
-    #         ELSE
-    #           RAISERROR ('Did not find $(NAME) role', 16, 1)
-    #         GO
-    #     loop: "{{ caboodle_report_databases }}"
-    #     loop_control:
-    #       loop_var: db
-
-    # - name: Configure Caboodle Stage SQL Databases
-    #   when: caboodle_stage_databases is defined
-    #   block:
-    #     - name: Create Cogito SQL Database Files with T-SQL
-    #       ansible.windows.win_dsc:
-    #         resource_name: SqlScriptQuery
-    #         Id: "ConfigureDatabaseFiles"
-    #         InstanceName: "{{ dsc_instancename }}"
-    #         Variable: "NAME={{ db.name }}, SIZE={{ db.db_size }}, MAXSIZE={{ db.db_max_size }}, FILEGROWTH={{ db.db_growth }}, DATAPATH={{db.data_path}},LOGSIZE={{ db.log_size }}, LOGMAXSIZE={{ db.log_max_size }}, LOGFILEGROWTH={{ db.log_growth }}, LOGFILEPATH={{db.log_path}}"
-    #         Encrypt: Optional
-    #         SetQuery: |
-    #           USE [master]
-    #           GO
-    #           CREATE DATABASE $(NAME)
-    #           ON
-    #           PRIMARY
-    #               (NAME = $(NAME)1,
-    #               FILENAME = '$(DATAPATH)1\mnt\CDWStg1.mdf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH)),
-    #               ( NAME = $(NAME)2,
-    #               FILENAME = '$(DATAPATH)2\mnt\CDWStg2.ndf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH)),
-    #               (NAME = $(NAME)3,
-    #               FILENAME = '$(DATAPATH)3\mnt\CDWStg3.mdf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH)),
-    #               ( NAME = $(NAME)4,
-    #               FILENAME = '$(DATAPATH)2\mnt\CDWStg4.ndf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH))
-    #           LOG ON
-    #              (NAME = $(NAME)Log,
-    #               FILENAME = '$(LOGFILEPATH)\mnt\CDWStg.ldf',
-    #               SIZE = $(LOGSIZE),
-    #               MAXSIZE = $(LOGMAXSIZE),
-    #               FILEGROWTH = $(LOGFILEGROWTH));
-    #           GO
-    #         GetQuery: |
-    #           SELECT NULL;
-    #         TestQuery: |
-    #           USE [msdb]
-    #           GO
-    #           IF EXISTS (
-    #             SELECT 1
-    #             FROM sys.databases
-    #             WHERE name = '$(NAME)'
-    #           )
-    #             PRINT 'Found $(NAME) database'
-    #           ELSE
-    #             RAISERROR ('Did not find $(NAME) role', 16, 1)
-    #           GO
-    #       loop: "{{ caboodle_stage_databases }}"
-    #       loop_control:
-    #         loop_var: db
-
-    # - name: Configure SlicerDicer SQL Databases
-    #   when: caboodle_stage_databases is defined
-    #   block:
-    #     - name: Create SlicerDicer SQL Database Files with T-SQL
-    #       ansible.windows.win_dsc:
-    #         resource_name: SqlScriptQuery
-    #         Id: "ConfigureDatabaseFiles"
-    #         InstanceName: "{{ dsc_instancename }}"
-    #         Variable: "NAME={{ db.name }}, SIZE={{ db.db_size }}, MAXSIZE={{ db.db_max_size }}, FILEGROWTH={{ db.db_growth }}, DATAPATH={{db.data_path}},LOGSIZE={{ db.log_size }}, LOGMAXSIZE={{ db.log_max_size }}, LOGFILEGROWTH={{ db.log_growth }}, LOGFILEPATH={{db.log_path}}"
-    #         Encrypt: Optional
-    #         SetQuery: |
-    #           USE [master]
-    #           GO
-    #           CREATE DATABASE $(NAME)
-    #           ON
-    #           PRIMARY
-    #               (NAME = $(NAME)1,
-    #               FILENAME = '$(DATAPATH)\mnt\SlicerDicer.mdf',
-    #               SIZE = $(SIZE),
-    #               MAXSIZE = $(MAXSIZE),
-    #               FILEGROWTH = $(FILEGROWTH))
-    #           LOG ON
-    #              (NAME = $(NAME)_Log,
-    #               FILENAME = '$(LOGFILEPATH)\mnt\SlicerDicer.ldf',
-    #               SIZE = $(LOGSIZE),
-    #               MAXSIZE = $(LOGMAXSIZE),
-    #               FILEGROWTH = $(LOGFILEGROWTH));
-    #           GO
-    #         GetQuery: |
-    #           SELECT NULL;
-    #         TestQuery: |
-    #           USE [msdb]
-    #           GO
-    #           IF EXISTS (
-    #             SELECT 1
-    #             FROM sys.databases
-    #             WHERE name = '$(NAME)'
-    #           )
-    #             PRINT 'Found $(NAME) database'
-    #           ELSE
-    #             RAISERROR ('Did not find $(NAME) role', 16, 1)
-    #           GO
-    #       loop: "{{ slicerdicer_stage_databases }}"
-    #       loop_control:
-    #         loop_var: db
 
     - name: Configure Epic best practices for SQL Databases
       when: clarity_report_databases is defined
@@ -341,11 +101,6 @@
             ELSE
               RAISERROR ('Found $(NAME) database', 16, 1)
             GO
-        loop: "{{ clarity_report_databases }}"
+        loop: "{{ sql_dbs }}"
         loop_control:
           loop_var: db
-
-
-# needs - caboodle changes:
-# If you are creating your staging database, set Auto Update Statistics to True and Auto Update Statistics Asynchronously to False. 
-# If you are creating your reporting database, set both Auto Update Statistics and Auto Update Statistics Asynchronously to True.
