--- a/.github/workflows/add-to-cloud-project.yml
+++ b/.github/workflows/add-to-cloud-project.yml
@@ -20,3 +20,5 @@ jobs:
         with:
           project-url: https://github.com/orgs/Sapphire-Health/projects/2
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          fields: |
+            Team: Cogito
