--- a/.github/workflows/add-to-cloud-project.yml
+++ b/.github/workflows/add-to-cloud-project.yml
@@ -20,5 +20,31 @@ jobs:
         with:
           project-url: https://github.com/orgs/Sapphire-Health/projects/2
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
-          fields: |
-            Team: Cogito
+
+      - name: Set Project Field (Team = Cogito)
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          script: |
+            const projectId = "PVT_kwDOBKbEgM4A7pvO";
+            const fieldId = "PVTSSF_lADOBKbEgM4A7pvOzgzxZA4";
+            const optionId = "9f1e522d";
+
+            // itemId is available from the previous step output
+            const itemId = steps["add-to-project"].outputs.itemId;
+
+            await github.graphql(
+              `mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $optionId: String!) {
+                updateProjectV2ItemFieldValue(
+                  input: {
+                    projectId: $projectId
+                    itemId: $itemId
+                    fieldId: $fieldId
+                    value: { singleSelectOptionId: $optionId }
+                  }
+                ) {
+                  projectV2Item { id }
+                }
+              }`,
+              { projectId, itemId, fieldId, optionId }
+            );
