--- a/.github/workflows/add-to-cloud-project.yml
+++ b/.github/workflows/add-to-cloud-project.yml
@@ -16,10 +16,14 @@ jobs:
 
     steps:
       - name: Add to Project
+        id: add-to-project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Sapphire-Health/projects/2
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+
+      - name: Debug outputs
+        run: echo "Item ID is ${{ steps.add-to-project.outputs.itemId }}"
 
       - name: Set Project Field (Team = Cogito)
         uses: actions/github-script@v7
@@ -30,6 +34,8 @@ jobs:
             const fieldId = "PVTSSF_lADOBKbEgM4A7pvOzgzxZA4";
             const optionId = "9f1e522d";
             const itemId = "${{ steps.add-to-project.outputs.itemId }}";
+
+            console.log("Updating itemId:", itemId);
 
             await github.graphql(
               `mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $optionId: String!) {
