adding break_when to sqltuneforepic as part of the logic for clarity vs caboodle.
will probably revert to vanilla "when"

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,12 +74,12 @@
     - OS
     - Caboodle
     - Clarity
-- name: Create Epic SQL Databases
-  ansible.builtin.include_tasks:
-    file: cogitodbcreation.yml
-  tags:
-    - SQL
-    - OS
-    - Caboodle
-    - Clarity
-    - database
+# - name: Create Epic SQL Databases
+#   ansible.builtin.include_tasks:
+#     file: cogitodbcreation.yml
+#   tags:
+#     - SQL
+#     - OS
+#     - Caboodle
+#     - Clarity
+#     - database
